--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                Location: Karachi, Pakistan 
               </span>
             </a>
           </div>
@@ -633,7 +633,7 @@
         </div>
         <div class="col-md-5">
           <div class="img-box">
-            <img src="images/contact-img.jpg" alt="">
+            <img src="./images/contact-img.jpg" alt="">
           </div>
         </div>
       </div>
@@ -661,7 +661,7 @@
       </div>
       <div class="info_bottom layout_padding2">
         <div class="row info_main_row">
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-6">
             <h5>
               Address
             </h5>
@@ -669,8 +669,7 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
-                </span>
+                  Location: Karachi, Pakistan                </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
@@ -700,7 +699,7 @@
               </a>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-6">
             <div class="info_links">
               <h5>
                 Useful link
