--- a/testimonial.html
+++ b/testimonial.html
@@ -147,17 +147,12 @@
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Morijorch
+                    Sarah W.
                   </h5>
-                  <h6>
-                    Default model text
-                  </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
-              <p>
-                editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various
-              </p>
+              <p>I’ve been wearing glasses for years, but after visiting this clinic, my vision has never been clearer. The staff is so attentive, and the doctors are true professionals. I felt comfortable from start to finish!</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -165,17 +160,12 @@
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Rochak
+                    John-D
                   </h5>
-                  <h6>
-                    Default model text
-                  </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
-              <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
-              </p>
+              <p>The level of care I received here was outstanding. They explained every part of my eye exam and gave me the perfect prescription. I highly recommend them for anyone looking for top-notch eye care.</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -183,30 +173,25 @@
               <div class="client_info">
                 <div class="client_name">
                   <h5>
-                    Brad Johns
+                    Emily R
                   </h5>
-                  <h6>
-                    Default model text
-                  </h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
-              <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy, editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various
-              </p>
+              <p>I had been struggling with dry eyes for a long time, but the treatment I received here worked wonders. The team is incredibly knowledgeable, and I’m so grateful for their expertise.</p>
             </div>
           </div>
         </div>
-        <div class="carousel_btn-box">
-          <a class="carousel-control-prev" href="#customCarousel2" role="button" data-slide="prev">
-            <i class="fa fa-angle-left" aria-hidden="true"></i>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#customCarousel2" role="button" data-slide="next">
-            <i class="fa fa-angle-right" aria-hidden="true"></i>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
+            <div class="carousel_btn-box">
+              <a class="carousel-control-prev" href="#customCarousel2" role="button" data-slide="prev">
+                <i class="fa fa-angle-left" aria-hidden="true"></i>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#customCarousel2" role="button" data-slide="next">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
       </div>
     </div>
   </section>
@@ -233,7 +218,7 @@
       </div>
       <div class="info_bottom layout_padding2">
         <div class="row info_main_row">
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-6">
             <h5>
               Address
             </h5>
@@ -241,8 +226,7 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
-                </span>
+                  Location: Karachi, Pakistan                </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
@@ -272,13 +256,13 @@
               </a>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
+          <div class="col-md-6 col-lg-6">
             <div class="info_links">
               <h5>
                 Useful link
               </h5>
               <div class="info_links_menu">
-                <a href="index.html">
+                <a class="active" href="index.html">
                   Home
                 </a>
                 <a href="about.html">
@@ -290,7 +274,7 @@
                 <a href="doctor.html">
                   Doctors
                 </a>
-                <a class="active" href="testimonial.html">
+                <a href="testimonial.html">
                   Testimonial
                 </a>
                 <a href="contact.html">
@@ -299,7 +283,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
+          <!-- <div class="col-md-6 col-lg-3">
             <div class="info_post">
               <h5>
                 LATEST POSTS
@@ -323,8 +307,8 @@
                 </p>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
+          </div> -->
+          <!-- <div class="col-md-6 col-lg-3">
             <div class="info_post">
               <h5>
                 News
@@ -348,7 +332,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -361,7 +345,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <!-- <a href="https://html.design/">Free Html Templates</a> -->
       </p>
     </div>
   </footer>
